# cadhy-addon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  blender_manifest.toml  opencode.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
cadhy/: README.md  __init__.py  register.py  registration.py
cadhy/assets/: .gitkeep
cadhy/blender/: __init__.py  handlers.py  preferences.py
cadhy/blender/menus/: __init__.py  pie_main.py
cadhy/blender/operators/: __init__.py  op_assign_materials.py  op_build_cfd_domain.py  op_build_channel.py  op_dev_reload.py  op_drops.py  op_export_cfd.py  op_export_cfd_template.py  op_export_excel.py  op_export_pdf_report.py  op_export_report.py  op_generate_sections.py  op_help.py  op_presets.py  op_project_wizard.py  op_setup_render.py  op_setup_workspace.py  op_station_markers.py  op_transitions.py  op_ui_helpers.py  op_update_cfd_domain.py  op_update_channel.py  op_validate_mesh.py
cadhy/blender/panels/: __init__.py  pt_cfd.py  pt_channel_info.py  pt_export.py  pt_main.py  pt_mesh_quality.py  pt_render.py  pt_sections.py  pt_unified.py  pt_updates.py
cadhy/blender/properties/: __init__.py  object_props.py  scene_props.py
cadhy/core/: __init__.py
cadhy/core/geom/: __init__.py  (+8 more)
cadhy/i18n/: __init__.py
cadhy/integrations/: __init__.py  blendergis_adapter.py
cadhy/tests/: __init__.py  run_all.py  smoke_create_channel.py
cadhy/updater/: __init__.py  addon_updater.py  addon_updater_ops.py
docs/: INSTALLATION.md  USAGE.md
scripts/: build.py  setup_dev.bat  setup_dev.ps1  setup_dev.py
(+17 files in other folders)
