[project]
name = "cadhy-addon"
version = "0.1.0"
description = "CADHY - Blender Add-on for Hydraulic Infrastructure Modeling"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "CADHY Team", email = "contact@cadhy.app" }
]
requires-python = ">=3.10"
keywords = ["blender", "addon", "hydraulic", "cfd", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

# No external dependencies - Blender provides everything needed
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://cadhy.app"
Documentation = "https://cadhy.app/docs"
Repository = "https://github.com/crhistian-cornejo/cadhy-addon"
Issues = "https://github.com/crhistian-cornejo/cadhy-addon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cadhy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["cadhy/tests"]
python_files = ["test_*.py", "smoke_*.py"]
